refactor: :recycle: Refactor OpenStreetMap constructor and createUrl method
This commit refactors the OpenStreetMap class by modifying the constructors and the createUrl method. The constructors now accept different parameters and utilize the createUrl method to set the URL. The createUrl method has also been modified to use a formatted string for constructing the URL. This improves code readability and maintainability.